--- a/country/country.html
+++ b/country/country.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>All country</title>
-    <link rel="stylesheet" href="../country/country.css">
+    <link rel="stylesheet" href="./css/country.css">
 </head>
 <body>
     
@@ -16,6 +16,6 @@
   
   <div id="countries"></div>
 
-  <script src="../country/country.js"></script>
+  <script src="./js/country.js"></script>
 </body>
 </html>
