--- a/index.html
+++ b/index.html
@@ -4,24 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>All Users</title>
-  <link rel="stylesheet" href="../users/users.css">
-  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="./users/css/users.css">
 
 </head>
 <body>
   
-
-
-
-  
-      
-    
-
-
   <!-- Navbar -->
    <nav>
-    <a href="../users/index.html" class="active">Users</a>
-    <a href="../country/country.html">Country</a>
+    <a href="./index.html" class="active">Users</a>
+    <a href="./country/country.html">Country</a>
 
   
   </nav> 
@@ -32,7 +23,7 @@
  
 <div id="Users"></div>
 
-  <script src="../users/users.js"></script>
+  <script src="./users/js/users.js"></script>
 </body> 
 </html> 
 
