--- a/index.html
+++ b/index.html
@@ -1,31 +1,22 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>All Users</title>
-  <link rel="stylesheet" href="./users/css/users.css">
-
+  <title>Users & Countries API</title>
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  
-  <!-- Navbar -->
-   <nav>
-    <a href="./index.html" class="active">Users</a>
-    <a href="./country/country.html">Country</a>
 
-  
-  </nav> 
+  <header>Users & Countries API</header>
 
-   
-  <h2>Here are your all Users</h2>
+  <div class="btn-group">
+    <button id="usersBtn">Show Users</button>
+    <button id="countryBtn">Show Countries</button>
+  </div>
 
- 
-<div id="Users"></div>
+  <div id="output">Click a button to load data...</div>
 
-  <script src="./users/js/users.js"></script>
-</body> 
-</html> 
-
-
-
+  <script src="./app.js"></script>
+</body>
+</html>
